# agent-dashboard

./: .gitignore  README.md  agent-dashboard.code-workspace  agent.py  agent_definitions.py  brain.py  cli.py  commands.py  controller.py  fastagent.config.yaml  fastagent.jsonl  history_manager.py  main.py  model.py  project_contents.md  pyproject.toml  readonly_filesystem_server.py  run_tests.py  secure_filesystem_server.py  test_integration.py  test_model.py  textual_view.py  ui_manager.py  view.py
_context/: autosave_history.json  cursor_scratchpad.txt  project_contents.md  session_20250619_130529.json  session_20250619_134223.json  session_20250620_222008.json  session_20250620_222837.json  session_20250623_180246.json  session_20250704_173953.json  session_20250705_145317.json  session_20250705_151907.json  session_20250705_152926.json  session_20250705_162700.json  session_20250705_203124.json  session_20250706_150825.json  session_20250710_211602.json  session_20250711_103450.json  session_20250712_105412.json  session_20250712_105946.json  session_20250712_111630.json  session_20250712_111804.json  session_20250712_112143.json  session_20250712_150217.json  session_20250713_124548.json  session_20250713_125242.json  session_20250713_155015.json  session_20250717_124418.json  session_20250717_124613.json  session_20250717_125025.json  test01  thisguyscries_01  wholesome_1
docs/: AGENT_SELECTION.md
logic/: fastagent.config.yaml  main.py
paperwork/: CHANGELOG.md  README.md  agent-dashboard.code-workspace
src/: agent_registry.py  commands.py  controller.py  (+5 more)
(+3 files in other folders)
